# BSidesCBR-2021-Badge

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.py  build.sh  docker-compose.yml  openocd.cfg
arduino-libs/: CMakeLists.txt  README.md
arduino-libs/Adafruit-Cache/: Adafruit_Cache.cpp  Adafruit_Cache.h
arduino-libs/Adafruit-SSD1675BX/: Adafruit_SSD1675BX.cpp  Adafruit_SSD1675BX.h
arduino-libs/Adafruit-X11/: Adafruit_X11.cpp  Adafruit_X11.h
arduino-libs/AudioDriver/: CMakeLists.txt  dr_wav.c  dtmf.sh
arduino-libs/BSidesBadge2020/: BSidesBadge2020.cpp  BSidesBadge2020.h
arduino-libs/BSidesMessaging/: BSidesMessaging.cpp  BSidesMessaging.h
arduino-libs/BadgeAssets/: pack_assets.py
arduino-libs/BadgeAssets/src/: BadgeAssets.cpp  BadgeAssets.h
arduino-libs/BadgeAssets/src/asset/: battery_empty_bmp.h  battery_full_bmp.h  battery_low_bmp.h  battery_mid_bmp.h  battery_unknown_bmp.h  bsides_2021_bmp.h  bsidescbr_bmp.h  bt_connected_bmp.h  bt_on_bmp.h  cyberpocalypse_bmp.h  magpie_suspend_bmp.h  magpies_bmp.h  magpies_egg_bmp.h  penten_bmp.h  schedule_bmp.h  switch_off_bmp.h  switch_on_bmp.h  wifi_ap_connected_bmp.h  wifi_ap_data_transfer_bmp.h  wifi_ap_on_bmp.h
arduino-libs/BadgeInfo/src/: BadgeInfo.cpp  BadgeInfo.h
arduino-libs/BadgeLog/src/: BadgeLog.cpp  BadgeLog.h
arduino-libs/BadgeOs/src/: BadgeApp.cpp  BadgeApp.h  BadgeKey.h  BadgeMenu.cpp  BadgeMenu.h  BadgeOs.cpp  BadgeOs.h  BadgeService.cpp  BadgeService.h  BadgeTextViewer.cpp  BadgeTextViewer.h
arduino-libs/BadgeSchedule/: pack_assets.py
arduino-libs/BadgeSchedule/assets/: schedule.md
arduino-libs/BadgeSchedule/src/: BadgeSchedule.cpp  BadgeSchedule.h
arduino-libs/HackerNames/src/: HackerNames.cpp  HackerNames.h
arduino-libs/IRBlaster/: IRBlaster.cpp  IRBlaster.h  IRBlasterWorldCodes.h
arduino-libs/Pacman/: README.md  pack_assets.py
arduino-libs/Pacman/assets/: level.txt  level_orig.txt  level_thin.txt
arduino-libs/Pacman/src/: AmbushState.cpp  AmbushState.h  Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  AttractScreenState.cpp  AttractScreenState.h  ChaseState.cpp  ChaseState.h  Collider.cpp  Collider.h  CollisionManager.cpp  CollisionManager.h  Color.h  Config.h  DeathAnimationState.cpp  DeathAnimationState.h  DirectionCollection.cpp  DirectionCollection.h  DrawManager.cpp  DrawManager.h  Engine.cpp  Engine.h  ExitState.cpp  ExitState.h  FleeingBehavior.cpp  FleeingBehavior.h  Font.cpp  Font.h  Fruit.cpp  Fruit.h  FruitAnimations.cpp  FruitAnimations.h  GameObject.cpp  GameObject.h  GameObjectData.cpp  GameObjectData.h  GameSession.cpp  GameSession.h  (+77 more)
arduino-libs/RgbDriver/: README.md  RgbDriver.cpp  RgbDriver.h  keywords.txt
arduino-libs/SPIFlash/: README.md  SPIFlash.cpp  SPIFlash.h
arduino-libs/SerialBridge/: SerialBridge.cpp  SerialBridge.h
arduino-libs/SixAxisMotionDriver/: README.md  SixAxisMotionDriver.cpp  SixAxisMotionDriver.h  icm20602.c  icm20602.h
scripts/: build.py  bundle.rsync.lst  bundle.sh
src/: CMakeLists.txt  README.md
src/about/: CMakeLists.txt  about.cpp  about.h  about_assets.h
src/audio/: .gitattributes  CMakeLists.txt  audio.cpp  audio.h  tones.h
src/badge/: CMakeLists.txt  main.cpp  sdkconfig
src/bluetooth/: CMakeLists.txt  bluetooth.cpp  bluetooth.h
src/bootanimation/: CMakeLists.txt  bootanimation.cpp  bootanimation.h
src/device_info/: CMakeLists.txt  device_info.cpp  device_info.h
src/diagnostics/: CMakeLists.txt  DiagApp.cpp  DiagApp.h  ExampleDiagApp.cpp  ExampleDiagApp.h  diagnostics.cpp  diagnostics.h
src/display/: CMakeLists.txt  display.cpp  display.h  post.cpp
src/flashman/: CMakeLists.txt  flashman.cpp  flashman.h
src/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.h
src/imu/: CMakeLists.txt  imu.cpp  imu.h  imu_post.cpp  imu_post.h
src/io_coprocessor/: CMakeLists.txt  CRCapsense.cpp  CRCapsense.h  CRIRdA.cpp  CRIRdA.h  CRRgbLed.cpp  CRRgbLed.h  CRSAO.cpp  CRSAO.h  CRSerial.cpp  CRSerial.h  CRSerialBridge.cpp  CRSerialBridge.h  CRvBAT.cpp  CRvBAT.h  io_coprocessor.ino
src/irblaster_post/: CMakeLists.txt  irblaster_post.cpp  irblaster_post.h
src/keyboard/: CMakeLists.txt  keyboard.cpp  keyboard.h
src/menu/: CMakeLists.txt  menu.cpp  menu.h
src/pacman/: CMakeLists.txt  pacman.cpp  pacman.h
src/rgbled/: CMakeLists.txt  rgbled.cpp  rgbled.h
src/schedule/: CMakeLists.txt  schedule.cpp  schedule.h
src/sdcard/: CMakeLists.txt  sdcard.cpp  sdcard.h
src/serial_logger/: CMakeLists.txt  serial.cpp  serial.h
src/serialbridge/: CMakeLists.txt  post.cpp  serialbridge.cpp  serialbridge.h
src/simonsays/: CMakeLists.txt  simonsays.cpp  simonsays.h
src/sketch/: CMakeLists.txt  sketch.cpp  sketch.h
src/snake/: CMakeLists.txt  snake.cpp  snake.h
src/suspend/: CMakeLists.txt  suspend.cpp  suspend.h
src/tetris/: CMakeLists.txt  tetris.cpp  tetris.h
src/torch/: CMakeLists.txt  torch.cpp  torch.h
src/wifiap/: CMakeLists.txt  wifiap.cpp  wifiap.h
tools/: platform.cmake
