if (ESP32 OR UNIX)
    add_subdirectory(serial_logger)
    add_subdirectory(display)
    add_subdirectory(imu)
    add_subdirectory(rgbled)
    add_subdirectory(bootanimation)
    add_subdirectory(keyboard)
    add_subdirectory(serialbridge)
    add_subdirectory(bluetooth)
    add_subdirectory(wifiap)
    add_subdirectory(menu)
    add_subdirectory(schedule)
    add_subdirectory(pacman)
    add_subdirectory(snake)
    add_subdirectory(tetris)
    add_subdirectory(sdcard)
    add_subdirectory(flashman)
    add_subdirectory(audio)
    add_subdirectory(suspend)
    add_subdirectory(helloworld)
    add_subdirectory(simonsays)
    add_subdirectory(device_info)
    add_subdirectory(about)
    add_subdirectory(torch)
    add_subdirectory(sketch)
    add_subdirectory(irblaster_post)
endif()

if (SAMD21)
    add_subdirectory(io_coprocessor)
endif()

# The source in `badge/` is responsible for gluing all the apps together into
# something we can actually run and therefore must be included last so that
# each of the app libs has a chance to add itself to the list to be linked
if (ESP32 OR UNIX)
    add_subdirectory(badge)
    cmake_policy(SET CMP0014 OLD)
    add_subdirectory(cybears)
    cmake_policy(SET CMP0014 NEW)
endif()

# Diagnostics app
if (ESP32 OR UNIX)
    add_subdirectory(diagnostics)
endif()
